# ai-audio

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ai_audio/: __init__.py  audio_utils.py  cli.py  stt.py  tts.py
tests/: test_audio_utils.py  test_cli.py  test_stt.py  test_tts.py
